Made default dragon bubblegum and fixed issue when copying the dragon div while jumping

--- a/broodViewer/styles/brood.css
+++ b/broodViewer/styles/brood.css
@@ -16,9 +16,7 @@
 
 .dragonName {
     position: absolute;
-    top: -50px;
-    left: -5px;
-    width: 100%;
+    top: -25px;
     text-align: center;
 }
 
@@ -32,7 +30,8 @@ body {
 
 p {
     font-family: dragonFont;
-    font-size: 28px;
+    font-size: 24px;
     margin-top: 0px;
     text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
+    user-select: none;
 }
